# nidhibook

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: app.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: style.css
src/components/: shell.js  toast.js
src/database/: schema.sql
src/firebase/: config.js
src/pages/: activities.js  billHistory.js  customers.js  dashboard.js  home.js  inventory.js  login.js  onboarding.js  settings.js  transactionModal.js
src/services/: db.js  firebase.js
