[package]
name = "nidhibook-desktop"
version = "1.0.0"
description = "NidhiBook Desktop — cross-platform Tauri v2 application"
authors = ["Aryan Sahu & Company"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary for
# preventing cargo from treating it as a "library" crate when it is
# referenced as a dependency.
name = "nidhibook_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
